MOB_360_2017_1a_V6/objects/MOB_Sales_Volume_Route__c.object
<CustomObject>
    <description>This object is used in Sales Volume dashboard calculation on M360 application.</description>
    <fields>
        <fullName>Actual_Volume__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Actual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandGroupID__c</fullName>
        <description>M360 Sales Volume dashboard purpose</description>
        <label>BrandGroupID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Category__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Brand Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Challenge__c</fullName>
        <formula>(( Target_Volume__c - Actual_Volume__c )/ Sales_Days__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Challenge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LY_Volume__c</fullName>
        <label>LY Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>MOB_Sales_Volume_Routes</relationshipLabel>
        <relationshipName>MOB_Sales_Volume_Routes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Days__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Sales Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Volume__c</fullName>
        <description>This field is used in Sales Volume dashboard calculation on M360 application.</description>
        <label>Target Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MOB_Sales_Volume_Route</label>
    <nameField>
        <displayFormat>SVR{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MOB_Sales_Volume_Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>